feat: create 5.41.0 docs

--- a/docs/developer-docs/5.41.x/enterprise/aacl/teams.mdx
+++ b/docs/developer-docs/5.41.x/enterprise/aacl/teams.mdx
@@ -21,17 +21,19 @@ import usersTeamsRoles from "./assets/users-teams-roles.png";
 
 ## Overview
 
-With the Open Source and Business tiers, admin users can only be linked with a single security role.
+With the Open Source and Business tiers, admin users can only be linked with one or more security roles.
 
 <Image src={usersRoles} title={"Roles Assigned To Users"} shadow={false} />
 
-This means that if you want to have a user with multiple roles, you need to manually create a new role that combines the permissions of the two roles you want to combine.
+This means that if you want to assign the same set of roles to multiple users, you would have to manually assign them to each user.
 
 And although this approach might work for some users, it can quickly become cumbersome to manage. This is where **Teams** comes in. With it, users can be assigned into a team, where each team can be linked with one or more roles.
 
 <Image src={usersTeamsRoles} title={"Users Assigned to Teams"} shadow={false} />
 
 This feature is especially useful for larger organizations, where it's common to have multiple teams working on different projects. Also, it's a great way to simplify the process of managing permissions for multiple users, as you can simply assign a role to a team, instead of assigning it to each individual user.
+
+Additionally, the Teams feature can be used in conjunction with [Folder Level Permissions (FLP)](/docs/enterprise/aacl/folder-level-permissions) to further enhance the security of your Webiny project. Instead of just being able to define folder level permissions for individual users, you can now define them for teams as well. Make sure to check out the FLP documentation to learn more about this feature. 
 
 ## Enabling Teams and Feature Overview
 
