--- a/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
+++ b/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
@@ -77,56 +77,61 @@ Choose the one that best suits your design needs. In the following examples, we 
 
 Here is an example of creating a bulk action that copies the selected entries to the clipboard in JSON format.
 
-```diff-tsx apps/admin/src/App.tsx
+<Image src={hcmsBulkActionsSimple} title="Custom Simple Bulk Action" />
+
+<Alert type={"info"} title="Extension Available!">
+
+This example can be installed directly into your project by running:<br/>
+`yarn webiny scaffold extension headless-cms/bulk-action-simple`
+
+Extension source code, and the accompanying content model, can be found [here](https://github.com/webiny/webiny-examples/tree/master/headless-cms/bulk-action-simple).
+
+</Alert>
+
+```tsx
 import React from "react";
-import { Admin } from "@webiny/app-serverless-cms";
-import { Cognito } from "@webiny/app-admin-users-cognito";
-+ import { useSnackbar } from "@webiny/app-admin";
-+ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
-+ import { ReactComponent as CopyIcon } from "@material-design-icons/svg/outlined/content_copy.svg";
-import "./App.scss";
+import { useSnackbar } from "@webiny/app-admin";
+import { ContentEntryListConfig } from "@webiny/app-headless-cms";
+import { ReactComponent as CopyIcon } from "@material-design-icons/svg/outlined/content_copy.svg";
 
-+ // You can destructure child components to make the code more readable and easier to work with.
-+ const { BulkAction } = ContentEntryListConfig.Browser;
-+ const { useWorker, useButtons } = BulkAction;
-+
-+ const ActionCopyJson = () => {
-+   // useButtons() exposes the button components also used internally: use these to keep the UI consistent.
-+   const { IconButton } = useButtons();
-+   // useWorker() exposes the currently selected items within the context.
-+   const { items } = useWorker();
-+   // showSnackbar allows to provide a feedback to users.
-+   const { showSnackbar } = useSnackbar();
-+
-+   const copyJson = () => {
-+     navigator.clipboard.writeText(JSON.stringify(items, null, 2));
-+     showSnackbar("JSON data copied to clipboard.");
-+   };
-+
-+   return (
-+     <IconButton
-+       icon={<CopyIcon />}
-+       onAction={copyJson}
-+       label={`Copy as JSON`}
-+       tooltipPlacement={"bottom"}
-+     />
-+   );
-+ };
+const { BulkAction } = ContentEntryListConfig.Browser;
+const { useWorker, useButtons, useDialog } = BulkAction;
 
-  export const App = () => {
+const ActionCopyJson = () => {
+    // useButtons() exposes the button components also used internally: use these to keep the UI consistent.
+    const { IconButton } = useButtons();
+    // useWorker() exposes the currently selected items within the context.
+    const { items } = useWorker();
+    // showSnackbar allows to provide a feedback to users.
+    const { showSnackbar } = useSnackbar();
+
+    const copyJson = () => {
+        navigator.clipboard.writeText(JSON.stringify(items, null, 2));
+        showSnackbar("JSON data copied to clipboard.");
+    };
+
     return (
-      <Admin>
-        <Cognito />
-+       <ContentEntryListConfig>
-+         <BulkAction
-+           name={"copy-json"}
-+           element={<ActionCopyJson />}
-+           modelIds={["article"]}
-+         />
-+       </ContentEntryListConfig>
-      </Admin>
+        <IconButton
+            icon={<CopyIcon />}
+            onAction={copyJson}
+            label={`Copy as JSON`}
+            tooltipPlacement={"bottom"}
+        />
     );
-  };
+};
+
+export const Extension = () => {
+    return (
+        <>
+            <ContentEntryListConfig>
+                <BulkAction
+                    name={"copy-json"}
+                    element={<ActionCopyJson />}
+                />
+            </ContentEntryListConfig>
+        </>
+    );
+};
 ```
 
 The `items` property obtained from `useWorker()` is a crucial part of managing bulk actions: these are the currently selected items within the context of the Content Entry List.
@@ -134,8 +139,6 @@ The `items` property obtained from `useWorker()` is a crucial part of managing b
 By declaring the `modelIds` prop, you can define in which Content Model Entry List you want to show your bulk action. If you exclude this prop, the bulk action will be registered for all models in the system. For instance, in the given example, next time you open the `article` content model browser and choose one or multiple entries, the defined bulk action will be shown.
 
 This is the whole process of registering a new bulk action element.
-
-<Image src={hcmsBulkActionsSimple} title="Custom Simple Bulk Action" />
 
 ### Asynchronous Bulk Action
 
@@ -146,95 +149,93 @@ Occasionally, you might need to perform a bulk action that involves various asyn
 
 Here’s an example of creating a bulk action that syncs the selected entries with an external service using `fetch`, and shows the result of each iteration.
 
-```diff-tsx apps/admin/src/App.tsx
+<Image src={hcmsBulkActionsAsync} title="Asyncronous Bulk Action" />
+
+<Alert type={"info"} title="Extension Available!">
+
+This example can be installed directly into your project by running:<br/>
+`yarn webiny scaffold extension headless-cms/bulk-action-asynchronous`
+
+Extension source code, and the accompanying content model, can be found [here](https://github.com/webiny/webiny-examples/tree/master/headless-cms/bulk-action-asynchronous).
+
+</Alert>
+
+```tsx
 import React from "react";
-import { Admin } from "@webiny/app-serverless-cms";
-import { Cognito } from "@webiny/app-admin-users-cognito";
-+ import { ContentEntryListConfig } from "@webiny/app-headless-cms";
-+ import { ReactComponent as SyncIcon } from "@material-design-icons/svg/outlined/sync.svg";
-import "./App.scss";
+import { ContentEntryListConfig } from "@webiny/app-headless-cms";
+import { ReactComponent as SyncIcon } from "@material-design-icons/svg/outlined/sync.svg";
 
-+ // You can destructure child components to make the code more readable and easier to work with.
-+ const { BulkAction } = ContentEntryListConfig.Browser;
-+ const { useWorker, useButtons, useDialog } = BulkAction;
+const { BulkAction } = ContentEntryListConfig.Browser;
+const { useWorker, useButtons, useDialog } = BulkAction;
 
-+ const ActionSync = () => {
-+    // useButtons() exposes the button components also used internally: use these to keep the UI consistent.
-+    const { IconButton } = useButtons();
-+    // useWorker provides the selected items, method to process them and the result of the operation.
-+    const worker = useWorker();
-+    // useDialog provides methods to show confirmation and result dialogs.
-+    const { showConfirmationDialog, showResultsDialog } = useDialog();
-+
-+    const openSyncDialog = () =>
-+      showConfirmationDialog({
-+        title: "Sync",
-+        message: `You are about to sync the selected entries. Are you sure you want to continue?`,
-+        loadingLabel: `Processing`,
-+        execute: async () => {
-+          await worker.processInSeries(async ({ item, report }) => {
-+            try {
-+              const response = await fetch(
-+                "https://any.url.com",
-+                {
-+                  method: "POST",
-+                  headers: {
-+                    "Content-Type": "application/json"
-+                  },
-+                  body: JSON.stringify(item.id)
-+                }
-+              );
-+
-+             // Add the result from the operation, marking it as a success
-+             report.success({
-+               title: item.meta.title,
-+               message: `Entry successfully sent, response status: ${response.status}`
-+             });
-+           } catch (e) {
-+             // Add the result from the operation, marking it as an error
-+             report.error({
-+               title: item.meta.title,
-+               message: e.message
-+             });
-+           }
-+       }, 5); // Batch size, default value: 10
-+
-+       // Reset the selected items
-+       worker.resetItems();
-+
-+       // Show a dialog with the report from all operations
-+       showResultsDialog({
-+         results: worker.results,
-+         title: "Sync",
-+         message: "Operation completed, here below you find the complete report:"
-+       });
-+     }
-+   });
-+
-+   return (
-+     <IconButton
-+       icon={<SyncIcon />}
-+       onAction={openSyncDialog}
-+       label={"Sync"}
-+       tooltipPlacement={"bottom"}
-+     />
-+   );
-+ };
+const ActionSync = () => {
+    const { IconButton } = useButtons();
+    const worker = useWorker();
+    const { showConfirmationDialog, showResultsDialog } = useDialog();
 
-  export const App = () => {
+    const openSyncDialog = () =>
+        showConfirmationDialog({
+            title: "Sync",
+            message: `You are about to sync the selected entries. Are you sure you want to continue?`,
+            loadingLabel: `Processing`,
+            execute: async () => {
+                await worker.processInSeries(async ({ item, report }) => {
+                    try {
+                        const response = await fetch(
+                            "https://any.url.com",
+                            {
+                                method: "POST",
+                                headers: {
+                                    "Content-Type": "application/json"
+                                },
+                                body: JSON.stringify(item.id)
+                            }
+                        );
+
+                        report.success({
+                            title: item.meta.title,
+                            message: `Entry successfully synced, response status: ${response.status}`
+                        });
+                    } catch (e) {
+                        report.error({
+                            title: item.meta.title,
+                            message: e.message
+                        });
+                    }
+                }, 5);
+
+                worker.resetItems();
+
+                showResultsDialog({
+                    results: worker.results,
+                    title: "Sync",
+                    message: "Operation completed, here below you find the complete report:"
+                });
+            }
+        });
+
     return (
-      <Admin>
-        <Cognito />
-+       <ContentEntryListConfig>
-+         <BulkAction
-+           name={"sync"}
-+           element={<ActionSync />}
-+           modelIds={["article"]}
-+         />
-+       </ContentEntryListConfig>
-      </Admin>
+        <IconButton
+            icon={<SyncIcon />}
+            onAction={openSyncDialog}
+            label={"Sync"}
+            tooltipPlacement={"bottom"}
+        />
     );
-  };
+};
+
+export const Extension = () => {
+    return (
+        <>
+            <ContentEntryListConfig>
+                <BulkAction
+                    name={"sync"}
+                    element={<ActionSync />}
+                />
+            </ContentEntryListConfig>
+        </>
+    );
+};
 ```
 
 For the `IconButton` component, the `onAction` prop can accept any method. In the current scenario, we are using the `showConfirmationDialog` method to open a dialog.
@@ -246,8 +247,6 @@ For the `IconButton` component, the `onAction` prop can accept any method. In th
 `showResultsDialog` is used after the completion of the sending process to present the user with a summary of the actions performed, including information about successful entries sent and any errors encountered during the process. This allows the user to review a detailed report of the entire operation.
 
 By declaring the `modelIds` prop, you can define in which Content Model Entry List you want to show your bulk action. If you exclude this prop, the bulk action will be registered for all models in the system. For instance, in the given example, next time you open the `article` content model browser and choose one or multiple entries, the defined bulk action will be shown.
-
-<Image src={hcmsBulkActionsAsync} title="Asyncronous Bulk Action" />
 
 ## Discover Bulk Actions
 
