fix: update licenses on Theme Manager

--- a/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
+++ b/docs/developer-docs/5.41.x/enterprise/okta-integration.mdx
@@ -6,13 +6,7 @@ description: Learn how to configure Okta with a multi-tenant Webiny project
 
 import { Alert } from "@/components/Alert";
 
-<Alert type="info" title="Can I use this?">
-
-** Webiny Enterprise license is required to use this feature.**
-
-This feature is available since Webiny **v5.22.0**.
-
-</Alert>
+<CanIUseThis enterprise since={"5.22.0"} />
 
 <Alert type="success" title="What you'll learn">
 
