docs: upgrade bulk action articles providing bg task example

--- a/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
+++ b/docs/developer-docs/5.38.x/headless-cms/extending/customize-entry-list-bulk-actions.mdx
@@ -6,7 +6,7 @@ description: Learn how to add, replace, or remove bulk actions in the Entry List
 
 import hcmsBulkActions from "./assets/hcms-bulk-actions.png";
 import hcmsBulkActionsSimple from "./assets/hcms-bulk-actions-simple.gif";
-import hcmsBulkActionsAsync from "./assets//hcms-bulk-actions-async.gif";
+import hcmsBulkActionsAsync from "./assets/hcms-bulk-actions-async.gif";
 import hcmsBulkActionsDiscover from "./assets/hmcs-bulk-actions-discover.png";
 import hcmsBulkActionsPosition from "./assets/hcms-bulk-actions-position.png";
 
@@ -98,39 +98,36 @@ const { BulkAction } = ContentEntryListConfig.Browser;
 const { useWorker, useButtons, useDialog } = BulkAction;
 
 const ActionCopyJson = () => {
-    // useButtons() exposes the button components also used internally: use these to keep the UI consistent.
-    const { IconButton } = useButtons();
-    // useWorker() exposes the currently selected items within the context.
-    const { items } = useWorker();
-    // showSnackbar allows to provide a feedback to users.
-    const { showSnackbar } = useSnackbar();
+  const { IconButton } = useButtons();
+  const worker = useWorker();
+  const { showSnackbar } = useSnackbar();
 
-    const copyJson = () => {
-        navigator.clipboard.writeText(JSON.stringify(items, null, 2));
-        showSnackbar("JSON data copied to clipboard.");
-    };
+  const copyJson = () => {
+    navigator.clipboard.writeText(JSON.stringify(worker.items, null, 2));
+    showSnackbar("JSON data copied to clipboard.");
+  };
 
-    return (
-        <IconButton
-            icon={<CopyIcon />}
-            onAction={copyJson}
-            label={`Copy as JSON`}
-            tooltipPlacement={"bottom"}
-        />
-    );
+  return (
+    <IconButton
+      icon={<CopyIcon />}
+      onAction={copyJson}
+      label={`Copy as JSON`}
+      tooltipPlacement={"bottom"}
+    />
+  );
 };
 
 export const Extension = () => {
-    return (
-        <>
-            <ContentEntryListConfig>
-                <BulkAction
-                    name={"copy-json"}
-                    element={<ActionCopyJson />}
-                />
-            </ContentEntryListConfig>
-        </>
-    );
+  return (
+    <>
+      <ContentEntryListConfig>
+        <BulkAction
+          name={"copy-json"}
+          element={<ActionCopyJson />}
+        />
+      </ContentEntryListConfig>
+    </>
+  );
 };
 ```
 
