--- a/docs/developer-docs/5.29.x/core-development-concepts/scaffolding/extend-graphql-api.mdx
+++ b/docs/developer-docs/5.29.x/core-development-concepts/scaffolding/extend-graphql-api.mdx
@@ -223,7 +223,7 @@ You are free to create new tests in the similar fashion, or amend the existing o
 
 Please note that, by default, the authentication and authorization logic isn't included in the generated code. In other words, all of the generated GraphQL query and mutation operations can be performed by anonymous (not logged-in) users, which is in most cases not the desired behavior.
 
-Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/{version}/admin-area/new-app-tutorial/security) to learn how to implement these on your own.
+Luckily, with a couple of built-in utilities, this can be relatively easily added. Please check out the [existing tutorials](/docs/admin-area/new-app-tutorial/security) to learn how to implement these on your own.
 
 ### I need more flexibility when it comes to data querying. Can I bring in a different database, for example ElasticSearch?
 
@@ -235,4 +235,4 @@ Until we create a dedicated tutorial on the topic, feel free to ping us via our 
 
 Yes, but do note that since multi-tenancy is part of Webiny's enterprise offering, the relevant multi-tenancy code is not included in the generated application code.
 
-For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/{version}/overview/features/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
+For more information on multi-tenancy, we recommend you check out the [Multi-Tenancy](/docs/overview/features/multi-tenancy) key topic. Also, for any implementation-related questions, feel free to contact us directly via our community [Slack](https://www.webiny.com/slack).
