fix: update licenses on Theme Manager

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -119,6 +119,10 @@ the [Prerendering Pages](https://www.webiny.com/docs/architecture/website/preren
 
 </Alert>
 
+### Theme Manager - License Change
+
+In the previous versions of Webiny, Webiny's [Theme Manager](/docs/enterprise/theme-manager) was part of the enterprise offering, which meant that users needed an enterprise license to use it. With this release, we've decided to move the Theme Manager to the business offering, which means that users no longer need an enterprise license to use it.
+
 ## Security
 
 ### Multiple Roles and Teams Assignments ([#4198](https://github.com/webiny/webiny-js/pull/3976))
