docs: add bulk action breaking change

--- a/docs/release-notes/5.41.0/changelog.mdx
+++ b/docs/release-notes/5.41.0/changelog.mdx
@@ -96,6 +96,14 @@ Upon confirmation, the bulk action is processed by a background task, bypassing 
 
 At this stage, real-time status updates on background tasks are not supported. Users will need to manually refresh the page to see the current status of their tasks.
 
+#### Breaking Change❗
+
+When upgrading to version 5.41.X, it is crucial to review and update any custom bulk actions you have implemented. The new background task processing introduces changes that may impact how your bulk actions function, potentially causing unexpected behaviour if not updated.
+
+To ensure compatibility, you need to either:
+- **Add a Bulk Action Task**: Implement background task support. Detailed guidance is available in [the documentation](/docs/headless-cms/extending/customize-entry-list-bulk-actions#bulk-action-via-background-task).
+- **Handle "Select All" Scenarios**: If users select all entries in the current view, prevent the immediate execution of the bulk action by disabling the trigger. Use the `worker.isSelectedAll` flag to check whether all entries are selected before proceeding.
+
 ## Page Builder
 
 ### Prerendering Service - AWS Lambda Timeouts ([#4330](https://github.com/webiny/webiny-js/pull/4330))
