fix: set specific version of gql package

--- a/docs/developer-docs/5.40.x/page-builder/extending/create-a-page-element.mdx
+++ b/docs/developer-docs/5.40.x/page-builder/extending/create-a-page-element.mdx
@@ -215,7 +215,7 @@ Note that, for simplicity's sake, all the code is placed in a single file. Of co
 Furthermore, in order to be able to issue remote GraphQL queries, we introduce the [`graphql-request`](https://www.npmjs.com/package/graphql-request) package. The package can be installed via the following command, run from your project root:
 
 ```bash
-yarn workspace theme add graphql-request
+yarn workspace theme add graphql-request@^6.0.0
 ```
 
 With this code in place, we're ready for the next step, which is registering the renderer React component within our **Admin** and **Website** apps. We'll start with the **Website** app, as the plugin that we'll create here will also be needed within the **Admin** app.
