wip: create 5.41.1 release notes

--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -8,9 +8,37 @@ description: See what's new in Webiny version 5.41.1
 
 ## Page Builder
 
-### PG Element Extension
+### New "Page Builder Element" Extension ([#4342](https://github.com/webiny/webiny-js/pull/4342))
+
+We've introduced a new type of an extension called Page Builder element.
+
+Once run, the extension will make sure a users ends up with all of the required files and configurations for a new Page Builder element plugin. This will make it easier for users to start developing new Page Builder elements.
+
+The extension can be accessed like any other extension, via the `yarn webiny scaffold` command, by then selecting **New Extension** from the list of all available scaffolds, and ultimately choosing **Page Builder Element**.
+
+### New Page Element Plugins ([#4340](https://github.com/webiny/webiny-js/pull/4340))
+
+In order to be more in line with the new Page Builder element extension, and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.
+
+Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.
+
+<Alert type={"info"}>
+
+Our existing [Create a Custom Page Element](/docs/page-builder/extending/create-a-page-element) article has been
+updated to reflect these changes.
+
+</Alert>
 
 ## Development
 
-## Error messages
+### Improved Error Messages ([#4341](https://github.com/webiny/webiny-js/pull/4341))
 
+Prior to this release, in case a user immediately tried to [watch](/docs/core-development-concepts/basics/watch-command) the **Admin** or **Website** frontend applications, but the **Core** and **API** applications weren't deployed, they would receive an error message that wasn't very helpful. We've improved this error message to provide more context and help users understand what's going on.
+
+### The `webiny extension` Command
+
+Up until now, in order to scaffold a new extension, users had to run the `yarn webiny scaffold` command, and then select **New Extension** from the list of all available scaffolds. And although this isn't a big deal, still, since extensions are becoming more and more important in the last couple of releases, we've decided to introduce a new command called `webiny extension`.
+
+Essentially, everything stays the same, but now, instead of running `yarn webiny scaffold`, users can run `yarn webiny extension` to scaffold a new extension.
+
+Note that the `webiny scaffold` command will still work, but moving forward, we recommend using the new `webiny extension` command.
