wip: create 5.41.1 release notes

--- a/docs/release-notes/5.41.1/changelog.mdx
+++ b/docs/release-notes/5.41.1/changelog.mdx
@@ -16,9 +16,15 @@ Once run, the extension will make sure a users ends up with all of the required 
 
 The extension can be accessed like any other extension, via the `yarn webiny scaffold` command, by then selecting **New Extension** from the list of all available scaffolds, and ultimately choosing **Page Builder Element**.
 
+### New "Website" Extension ([#4344](https://github.com/webiny/webiny-js/pull/4344))
+
+With the new **Page Builder element** extension, we've also introduced the new **Website** extension, which makes it easier to start extending Webiny's **Website** application.
+
+As already mentioned above, in the same fashion, the extension can be accesssed via the `yarn webiny scaffold`, or the new `yarn webiny extension` command.
+
 ### New Page Element Plugins ([#4340](https://github.com/webiny/webiny-js/pull/4340))
 
-In order to be more in line with the new Page Builder element extension, and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.
+In order to be more in line with the new [Page Builder element extension](/docs/release-notes/5.41.1/changelog#new-page-builder-element-extension-4342), and also some of the best practices we've been pushing lately, we've updated the existing Page Builder element plugins. Essentially, instead of using plain JavaScript objects, users will now do the same via React components.
 
 Note that the previous way of creating Page Builder element plugins will still work, but moving on, we recommend using the new way.
 
