wip: create 5.41.1 release notes

--- a/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
+++ b/docs/developer-docs/5.41.x/page-builder/extending/create-a-page-element.mdx
@@ -55,6 +55,13 @@ Also, upon dropping the element onto a page, users will have the ability to adju
 
 Note that the spacecrafts data will be retrieved from a non-official public SpaceX GraphQL HTTP API, located at https://spacex-production.up.railway.app/. Meaning, changing these settings will dictate the variables that will be included in GraphQL queries issued by the page element. More on this in the following sections.
 
+<ExtensionsGettingStarted
+  type={"pbElement"}
+  name={"spaceXElement"}
+  fullExampleLink={"https://github.com/webiny/webiny-examples/tree/master/page-builder/custom-page-elements"}
+  fullExampleDownloadLink={"page-builder/custom-page-elements"}
+/>
+
 ## Getting Started
 
 ### Renderer React Component
